--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
+<script src="https://cdn.rawgit.com/blowsie/Pure-JavaScript-HTML5-Parser/master/htmlparser.js"></script>
+<script src="html2json.js"></script>
+<script src="lib/htmlparser.js"></script>
 </head>
 <div>
 	<h3>Item list!</h3>
