Changed file names

--- a/index.html
+++ b/index.html
@@ -33,5 +33,5 @@
   </li>
 </ul>
 <!-- added scripts -->
-<link rel="stylesheet" type="text/css" href="sizzleThaShit.css">
+<link rel="stylesheet" type="text/css" href="styles.css">
 <script type="text/javascript" src="DragnDropMagic.js"></script>
