Renamed js file

--- a/index.html
+++ b/index.html
@@ -34,4 +34,4 @@
 </ul>
 <!-- added scripts -->
 <link rel="stylesheet" type="text/css" href="styles.css">
-<script type="text/javascript" src="DragnDropMagic.js"></script>
+<script type="text/javascript" src="list.js"></script>
